# agora

server/: Cargo.toml  config.yaml  init_db.sh
server/.sqlx/: query-001d0bf6535357704cc208c3313615070b7f612565072edc0eb340c8852de3eb.json  query-3cb0dfa1801134cc90a9afe5dc100c2a95f86da7ca5e8e056c8edeee9115f916.json
server/migrations/: 20250507154739_create_posts_table.sql
server/src/: config.rs  main.rs  startup.rs
server/src/routes/: create_post.rs  mod.rs
server/tests/: health_check.rs
