[package]
name = "agora"
version = "0.1.0"
edition = "2021"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "warn"
perf = "warn"
complexity = "warn"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "agora"

[dependencies]
actix-web = "4.10.2"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.uuid]
version = "1.4"
features = ["v4"]

[dev-dependencies]
reqwest = "0.11"
